--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,129 @@
 body {
     background-color: black;
     text-align: center;
+    color: white;
+    font-family: Vollkorn;
 }
 
-h1 {
+h1, h2 {
     font-family: "Vollkorn";
     color: white;
+    background: url(../imgs/underline.svg);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    padding-bottom: 20px;
+    background-size: 300px;
+}
+
+#ghost {
+    transition: opacity 3s, transform 1s;
+    transition-delay: .5s;
+    width: 400px;
+}
+#ghost:hover {
+opacity: 0;
+transform: translate(150px);
+}
+
+
+/* tours */
+
+#tours {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    flex-wrap: wrap;
+}
+
+#tours img {
+    width: 400px;
+    height: 300px;
+    object-fit: cover;
+}
+
+#tours article {
+    position: relative;
+
+}
+
+#tours .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .8);
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: opacity .5s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#tours .overlay:hover {
+    opacity: 1;
+}
+
+#boo {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    object-position: right;
+    border-radius: 100%;
+    filter: blur(4px);
+    transition: filter .5s, border-radius .5s;
+}
+#boo:hover {
+    filter: blur(0px);
+    border-radius: 0%;
+}
+
+/* forms */
+
+#book {
+    background: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0)), url(../imgs/ghost-bg.jpeg);
+    min-height: 600px;
+}
+
+#book form {
+    width: 500px;
+    text-align: left;
+    margin: auto;
+    font-size: 20px;
+
+}
+
+#book input, #book select, #book textarea {
+    width: 500px;
+    height: 30px;
+    font-family: Vollkorn;
+    font-size: 16px;
+
+}
+
+#book label {
+    padding-top: 20px;
+    display: inline-block;
+}
+
+#book button {
+    background-color: black;
+    font-family: Vollkorn;
+    font-size: 16px;
+    color: white;
+    border-width: 0px;
+    padding: 10px 30px;
+    transition: background-color .5s, color .5s;
+}
+
+#book button:hover {
+    background-color: orange;
+    color: black;
+}
+
+#bottom-border {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
